--- a/frontEnd/pages/login/css/style.css
+++ b/frontEnd/pages/login/css/style.css
@@ -106,6 +106,11 @@ body {
     user-select: none;
 }
 
+.input-icon iconify-icon {
+    vertical-align: middle; 
+    font-size: 18px; 
+}
+
 .options {
     display: flex;
     justify-content: space-between;
