--- a/frontEnd/pages/register/css/style.css
+++ b/frontEnd/pages/register/css/style.css
@@ -98,6 +98,11 @@ body {
     user-select: none;
 }
 
+.input-icon iconify-icon {
+    vertical-align: middle; 
+    font-size: 18px; 
+}
+
 .register-button {
     background-color: #0D99FF;
     color: white;
